# RecoGraph

./: .flake8  pyproject.toml
config/: settings.py  urls.py
events/: models.py  serializers.py
present/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
present/data/: products.json
present/migrations/: 0001_initial.py  0002_remove_category_description_and_more.py  0003_product_currency.py
recipients/: admin.py  models.py  serializers.py  urls.py  views.py
recipients/migrations/: 0001_initial.py  0002_initial.py  0003_recipients_price_range.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_managers_remove_user_username.py
